--- a/src/index-to-component.html
+++ b/src/index-to-component.html
@@ -28,7 +28,7 @@
       <div class="new-header__inner">
 
         <a href="index.html" class="logo">
-          <img class="logo__image" src="./image/logo.png">
+          <img class="logo__image" src="./assets/images/logo.png">
         </a>
 
         <div class="new-header__right">
@@ -118,7 +118,7 @@
           <div class="grid-fluid">
             <div class="col-mob-12 col-desk-6">
               <div class="bg_image"></div>
-              <img src="./image/1x.png" alt="abc">
+              <img src="./assets/images/1x.png" alt="abc">
             </div>
 
             <div class="col-mob-12 col-desk-6">
@@ -286,7 +286,7 @@
                 <div class="card-pop-post">
                   <a href="#">
                     <div class="card-pop-post__image_wrap">
-                      <img class="card-pop-post__image" src="./image/1.png" alt="abc" />
+                      <img class="card-pop-post__image" src="./assets/images/1.png" alt="abc" />
 
                     </div>
                     <div class="card-pop-post__info">
@@ -306,7 +306,7 @@
                 <div class="card-pop-post">
                   <a href="#">
                     <div class="card-pop-post__image_wrap">
-                      <img class="card-pop-post__image" src="./image/2.png" alt="abc" />
+                      <img class="card-pop-post__image" src="./assets/images/2.png" alt="abc" />
 
 
                     </div>
@@ -327,7 +327,7 @@
                 <div class="card-pop-post">
                   <a href="#">
                     <div class="card-pop-post__image_wrap">
-                      <img class="card-pop-post__image" src="./image/3.png" alt="abc" />
+                      <img class="card-pop-post__image" src="./assets/images/3.png" alt="abc" />
 
                     </div>
                     <div class="card-pop-post__info">
@@ -347,7 +347,7 @@
                 <div class="card-pop-post">
                   <a href="#">
                     <div class="card-pop-post__image_wrap">
-                      <img class="card-pop-post__image" src="./image/4.png" alt="abc" />
+                      <img class="card-pop-post__image" src="./assets/images/4.png" alt="abc" />
 
                     </div>
                     <div class="card-pop-post__info">
@@ -367,28 +367,7 @@
                 <div class="card-pop-post">
                   <a href="#">
                     <div class="card-pop-post__image_wrap">
-                      <img class="card-pop-post__image" src="./image/5.png" alt="abc" />
-
-                    </div>
-                    <div class="card-pop-post__info">
-                      <h3 class="card-pop-post__title">Alii autem quibus ego assentior</h3>
-                      <p class="card-pop-post__desc">November 9, 2019 • 03 Comments</p>
-                      <p class="category">
-                        Design
-                      </p>
-                    </div>
-
-                  </a>
-
-                </div>
-              </div>
-
-
-              <div class="flex-3c__box">
-                <div class="card-pop-post">
-                  <a href="#">
-                    <div class="card-pop-post__image_wrap">
-                      <img class="card-pop-post__image" src="./image/6.png" alt="abc" />
+                      <img class="card-pop-post__image" src="./assets/images/5.png" alt="abc" />
 
                     </div>
                     <div class="card-pop-post__info">
@@ -409,7 +388,7 @@
                 <div class="card-pop-post">
                   <a href="#">
                     <div class="card-pop-post__image_wrap">
-                      <img class="card-pop-post__image" src="./image/7.png" alt="abc" />
+                      <img class="card-pop-post__image" src="./assets/images/6.png" alt="abc" />
 
                     </div>
                     <div class="card-pop-post__info">
@@ -430,7 +409,7 @@
                 <div class="card-pop-post">
                   <a href="#">
                     <div class="card-pop-post__image_wrap">
-                      <img class="card-pop-post__image" src="./image/8.png" alt="abc" />
+                      <img class="card-pop-post__image" src="./assets/images/7.png" alt="abc" />
 
                     </div>
                     <div class="card-pop-post__info">
@@ -451,7 +430,28 @@
                 <div class="card-pop-post">
                   <a href="#">
                     <div class="card-pop-post__image_wrap">
-                      <img class="card-pop-post__image" src="./image/9.png" alt="abc" />
+                      <img class="card-pop-post__image" src="./assets/images/8.png" alt="abc" />
+
+                    </div>
+                    <div class="card-pop-post__info">
+                      <h3 class="card-pop-post__title">Alii autem quibus ego assentior</h3>
+                      <p class="card-pop-post__desc">November 9, 2019 • 03 Comments</p>
+                      <p class="category">
+                        Design
+                      </p>
+                    </div>
+
+                  </a>
+
+                </div>
+              </div>
+
+
+              <div class="flex-3c__box">
+                <div class="card-pop-post">
+                  <a href="#">
+                    <div class="card-pop-post__image_wrap">
+                      <img class="card-pop-post__image" src="./assets/images/9.png" alt="abc" />
 
                     </div>
                     <div class="card-pop-post__info">
